hphp/hack/test/typecheck/higher_kinded_types/constraints_unsupported.php
<?hh

class Foo<TC<TX> as int> {

}

class Bar<TC<TX as int>> {

}
